# python-for-solar-physics

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  AIA to HXI_Flux.py  AIA to HXI_Flux_data.py  AIA to HXI_Flux_data_plot.py  AIA.py  AIA.xlsx  AIA_131.py  AIA_131_Offset the rotation.py  AIA_1600-HMI.py  AIA_1600.py  AIA_1600_HMI_overlap.py  AIA_1600_HMI_overlap_final.py  AIA_1600_HMI_overlap_pro.py  AIA_1600_Offset the rotation.py  AIA_1600_next.py  AIA_1600_overplot.py  AIA_171.py  AIA_171_Offset the rotation.py  AIA_193_HMI.py  AIA_304.py  AIA_304_Offset the rotation.py  AIA_94.py  AIA_94_Offset the rotation.py  AIA_Flux_1.py  AIA_Flux_2.py  AIA_Flux_data.py  AIA_Flux_data_plot.py  AIA_HMI.py  AIA_HXI.py  AIA_HXI_ALL.py  AIA_HXI_ALL_PRO.py  AIA_RS.py  AIA_RS_HMI.py  AIA_SXR_HXR_plot.py  AIA_all_plot.py  AIA_difference.py  (+92 more)
Apps/: .gitattributes  AGENTS.md  LICENSE  README.md  environment.miniforge.yml  pyproject.toml  run.ps1  run.sh
Apps/configs/examples/: paths.example.yaml
Apps/docs/: architecture.md  development.md
Apps/examples/: README.md  synthetic_radio_display.py  synthetic_state_and_paths.py
Apps/solar_apps/: __init__.py  launcher.py
Apps/solar_apps/cli/: __init__.py  __main__.py  admin.py  router.py
Apps/solar_apps/frontends/: __init__.py  catalog.py
Apps/solar_apps/frontends/image_composer/: __init__.py  application.py  catalog.py  cli.py  matching.py  models.py  project.py  rendering.py  ui.py
Apps/solar_apps/frontends/image_viewer/: __init__.py  application.py  cli.py  export.py  server.py
Apps/solar_apps/frontends/radio/: __init__.py
Apps/solar_apps/frontends/radio_bad_frame_review/: __init__.py  application.py  cli.py  lifecycle.py  ml_cli.py  model_registry.py  review.py  server.py  training.py
Apps/solar_apps/frontends/workbench/: __init__.py  application.py  cli.py  registry.py  runner.py  server.py
Apps/solar_apps/platform/: __init__.py  config.py  dispatch.py  environment.py  environment_probe.py  layout.py  migration.py  processes.py  state.py
Apps/solar_apps/platform/paths/: __init__.py  allowed_roots.py  dialog_worker.py  flask_dialog.py  memory.py  native_dialog.py  semantics.py
Apps/solar_apps/ui/: __init__.py  flask_dialog.py  flask_state.py  state.py  streamlit_paths.py  theme.py
Apps/solar_apps/ui/media/: NOTICE.txt  __init__.py  mediabunny-1.50.8.cjs  native_path_dialog.js
Apps/solar_apps/ui/theme_assets/: __init__.py  state.js  theme.css  theme.js
Apps/solar_apps/workflows/: __init__.py
Apps/solar_apps/workflows/aia/: __init__.py  application.py  cli.py  config.py  lightcurve_extraction.py  lightcurve_plot.py
Apps/solar_apps/workflows/common/: image_naming.py
Apps/solar_apps/workflows/data/: __init__.py  stereo_manifest_cli.py
Apps/solar_apps/workflows/hmi/: __init__.py  fits_rename_cli.py  overlay_cli.py
Apps/solar_apps/workflows/net/: __init__.py  jsoc_cli.py
Apps/solar_apps/workflows/radio/: __init__.py  artifacts.py  centers_application.py  cli.py  cso_workflow.py  dispatcher.py  drift_selection_application.py  entrypoint_utils.py  existing_fit_overlay_cli.py  overlay_cli.py  overlay_workflow.py  physical_diagnostics_cli.py  pipeline_cli.py  pipeline_workflow.py  quicklook.py  raw_quality_cli.py  rrll_percentile_preview_comparison.py  source_map_cli.py  source_map_workflow.py  spatial_display.py  trajectory_cli.py  trajectory_media_cli.py
Apps/solar_apps/workflows/visualization/: __init__.py  radio_source_trajectory.py  radio_source_video.py  stereo_euvi_overview.py  suvi_quadrant.py  video_cli.py
Apps/solar_apps/workflows/xray_dem/: __init__.py  hxi_image.py  (+10 more)
Apps/tests/contracts/: test_cli_entrypoints.py  test_docs.py  test_local_boundaries.py  test_local_manifest.py  test_miniforge_subprocesses.py  test_repository_policy.py
Apps/tests/fixtures/: README.md
Apps/tests/integration/: test_synthetic_examples.py
Apps/tests/ui/: test_image_composer_ui.py  test_native_path_dialog_frontends.py
paper_reader_ollama/: .gitignore  Modelfile  README.md  pyproject.toml  论文分析报告.docx
paper_reader_ollama/src/paper_reader_ollama/: crew.py  main.py  native_llm.py  文献精读报告_Type-III Solar Radio Bursts with Spike-like Toppings_V16.docx.html  文献精读报告_Type-III Solar Radio Bursts with Spike-like Toppings_V16.docx.md
(+786 files in other folders)
