[project]
name = "solar-physics-toolkit"
version = "0.1.0"
description = "A comprehensive collection of Python scripts for multi-wavelength solar data analysis"
authors = [
    {name = "Severus / Lee / Ninghao"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "astropy>=5.3.0",
    "sunpy[map]>=5.0.0",
    "mpl-animators>=1.2.0",
    "matplotlib>=3.7.0",
    "reproject>=0.10.0",
    "scikit-image>=0.21.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.14.0",
]
full = [
    "xarray>=2023.6.0",
    "netCDF4>=1.6.0",
    "imageio>=2.31.0",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "opencv-python>=4.8.0",
    "dask>=2023.6.0",
    "fitsio>=1.2.0",
    "skyfield>=1.45",
    "drms>=0.6.3",
    "requests>=2.31.0",
]
app = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "openpyxl>=3.1",
    "Flask>=3.0",
]
gui = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/YUCONG-28/python-for-solar-physics"
Repository = "https://github.com/YUCONG-28/python-for-solar-physics.git"
Issues = "https://github.com/YUCONG-28/python-for-solar-physics/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["solar_toolkit*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
"solar_toolkit.visualization.image_web_viewer" = [
    "templates/*.html",
    "static/*.css",
    "static/*.js",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -p no:cacheprovider"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
