[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solarphysics-apps"
version = "0.1.0"
description = "Local-first frontends and reproducible workflows for solar physics"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
  "Flask>=3.0",
  "openpyxl>=3.1",
  "Pillow>=10.0",
  "plotly>=5.18",
  "PySide6>=6.8",
  "PyYAML>=6.0",
  "opencv-python-headless>=4.10",
  "pyqtgraph>=0.13",
  "streamlit>=1.58",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "build>=1.2",
  "pre-commit>=4.0",
  "pytest>=8.0",
  "ruff>=0.9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["solar_apps*"]

[tool.setuptools.package-data]
solar_apps = [
  "**/*.cjs",
  "**/*.css",
  "**/*.html",
  "**/*.js",
  "**/*.json",
  "**/*.txt",
  "**/*.yaml",
  "**/*.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.black]
target-version = ["py314"]
line-length = 88
