[project]
name = "paper_reader_ollama"
version = "0.1.0"
description = "paper_reader_ollama using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
paper_reader_ollama = "paper_reader_ollama.main:run"
run_crew = "paper_reader_ollama.main:run"
train = "paper_reader_ollama.main:train"
replay = "paper_reader_ollama.main:replay"
test = "paper_reader_ollama.main:test"
run_with_trigger = "paper_reader_ollama.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
